--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">24 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Beyond Distraction</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Pizza Napoletana the real one</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -640,7 +640,7 @@
                     <div class="video-info">
                         <h3>Should you trade Crypto? Here's the truth</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5831,7 +5831,7 @@
                         <div class="video-info">
                             <h3>Should you trade Crypto? Here's the truth</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Beyond Distraction</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>A Little Girl Wants An Answer From Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>Pizza Napoletana the real one</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9428,7 +9428,7 @@
                         <div class="video-info">
                             <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10061,7 +10061,7 @@
                         <div class="video-info">
                             <h3>Golf Swing Shoulder Mechanics. Do this if you want real transformation. (Deep Dive)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">24 minutes ago</div>
                         </div>
                     </a>
                 </div>
